--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
       <artifactId>java-jwt</artifactId>
       <version>3.4.1</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/joda-time/joda-time -->
+    <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+      <version>2.10</version>
+    </dependency>
 
   </dependencies>
 
