Update application properties for docker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.data.mongodb.host=${MONGO_DB_HOST}
+spring.data.mongodb.host=${SERVER_HOST}
+server.port: ${SERVER_KEYSTORE_PORT}
+security.require-ssl=true
+server.ssl.key-store:${SERVER_KEYSTORE_PATH}
+server.ssl.key-store-password: ${SERVER_KEYSTORE_PASSWORD}
+server.ssl.keyStoreType: ${SERVER_KEYSTORE_TYPE}
